Add user authentication and dashboard

--- a/public/xuyang/products.html
+++ b/public/xuyang/products.html
@@ -188,9 +188,10 @@
 <body>
     <nav class="navbar">
     <h1>Product Catalog</h1>
-    <div class="nav-links" style="display:flex;gap:16px;align-items:center;">
-        <a href="products.html" style="color:white;text-decoration:none;padding:8px 16px;border-radius:6px;background:rgba(255,255,255,0.2);">Products</a>
-        <a href="employees.html" style="color:white;text-decoration:none;padding:8px 16px;border-radius:6px;background:rgba(255,255,255,0.2);">Employees</a>
+    <div class="nav-links" style="display:flex;gap:12px;align-items:center;">
+        <a href="dashboard.html" style="color:white;text-decoration:none;padding:8px 16px;border-radius:6px;background:rgba(255,255,255,0.1);">Dashboard</a>
+        <a href="products.html" style="color:white;text-decoration:none;padding:8px 16px;border-radius:6px;background:rgba(255,255,255,0.25);">Products</a>
+        <a href="employees.html" style="color:white;text-decoration:none;padding:8px 16px;border-radius:6px;background:rgba(255,255,255,0.1);">Employees</a>
         <button onclick="logout()">Logout</button>
     </div>
     </nav>
