--- a/public/gaoyuan/index.html
+++ b/public/gaoyuan/index.html
@@ -2,45 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FashionHub - Supplier Management</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      background: white;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-    }
-    h1 { color: #333; margin-bottom: 16px; }
-    p { color: #666; margin-bottom: 24px; }
-    a {
-      display: inline-block;
-      padding: 12px 24px;
-      background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: 600;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=suppliers.html">
+  <title>Redirecting...</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Supplier Management</h1>
-    <p>This module will be implemented by Gaoyuan.</p>
-    <a href="suppliers.html">View Suppliers (TODO)</a>
-  </div>
 </body>
 </html>
