--- a/public/gaoyuan/suppliers.html
+++ b/public/gaoyuan/suppliers.html
@@ -3,44 +3,318 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Suppliers - FashionHub</title>
+  <title>Supplier Management - FashionHub</title>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background: #f5f5f5;
       min-height: 100vh;
     }
+
     .navbar {
       background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
       color: white;
       padding: 16px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
+
+    .navbar h1 { font-size: 22px; }
+
+    .nav-links {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background: rgba(255,255,255,0.12);
+    }
+
+    .nav-links a:hover {
+      background: rgba(255,255,255,0.25);
+    }
+
+    .navbar button {
+      background: rgba(255,255,255,0.2);
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
     .container {
       max-width: 1200px;
       margin: 0 auto;
       padding: 24px;
     }
-    .placeholder {
-      background: white;
-      padding: 60px;
-      border-radius: 12px;
-      text-align: center;
-      color: #666;
+
+    .toolbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 24px;
+      flex-wrap: wrap;
+      gap: 16px;
     }
-    .placeholder h2 { margin-bottom: 16px; color: #333; }
+
+    .filters {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+
+    .filters select, .filters input {
+      padding: 10px 14px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
+      background: white;
+    }
+
+    .btn-add {
+      background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    th, td {
+      padding: 16px;
+      text-align: left;
+      border-bottom: 1px solid #eee;
+      font-size: 14px;
+    }
+
+    th {
+      background: #f8f9fa;
+      font-weight: 600;
+    }
+
+    tr:hover {
+      background: #f8f9fa;
+    }
+
+    .actions button {
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-right: 8px;
+      font-size: 13px;
+    }
+
+    .btn-edit {
+      background: #e3f2fd;
+      color: #1976d2;
+    }
+
+    .btn-delete {
+      background: #ffebee;
+      color: #c62828;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .modal.active { display: flex; }
+
+    .modal-content {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .form-group {
+      margin-bottom: 16px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 500;
+    }
+
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    .modal-actions {
+      display: flex;
+      gap: 12px;
+      margin-top: 20px;
+    }
+
+    .modal-actions button {
+      flex: 1;
+      padding: 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .btn-save {
+      background: #11998e;
+      color: white;
+    }
+
+    .btn-cancel {
+      background: #eee;
+    }
+
   </style>
 </head>
+
 <body>
-  <nav class="navbar">
-    <h1>Supplier Management</h1>
-  </nav>
-  <div class="container">
-    <div class="placeholder">
-      <h2>TODO: Gaoyuan's Implementation</h2>
-      <p>This page will display the supplier list with CRUD operations.</p>
-    </div>
+
+<nav class="navbar">
+  <h1>Supplier Management</h1>
+  <div class="nav-links">
+    <a href="../xuyang/dashboard.html">Dashboard</a>
+    <a href="../xuyang/products.html">Products</a>
+    <a href="suppliers.html" style="background: rgba(255,255,255,0.25);">Suppliers</a>
+    <a href="../xuyang/employees.html">Employees</a>
+    <button onclick="logout()">Logout</button>
   </div>
-  <script src="js/suppliers.js"></script>
+</nav>
+
+<div class="container">
+
+  <div class="toolbar">
+    <div class="filters">
+      <select id="categoryFilter" onchange="loadSuppliers()">
+        <option value="">All Categories</option>
+        <option value="fabrics">Fabrics</option>
+        <option value="accessories">Accessories</option>
+        <option value="packaging">Packaging</option>
+        <option value="manufacturing">Manufacturing</option>
+      </select>
+
+      <input id="searchInput" type="text" placeholder="Search suppliers..." oninput="debouncedSearch()" />
+    </div>
+
+    <button class="btn-add" onclick="openModal()">+ Add Supplier</button>
+  </div>
+
+  <table>
+    <thead>
+    <tr>
+      <th>Company</th>
+      <th>Contact</th>
+      <th>Phone</th>
+      <th>Email</th>
+      <th>Categories</th>
+      <th>Rating</th>
+      <th>Notes</th>
+      <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody id="suppliersBody"></tbody>
+  </table>
+
+</div>
+
+<div class="modal" id="supplierModal">
+  <div class="modal-content">
+    <h2 id="modalTitle">Add Supplier</h2>
+
+    <form id="supplierForm">
+      <input type="hidden" id="supplierId">
+
+      <div class="form-group">
+        <label>Company Name</label>
+        <input type="text" id="companyName" required>
+      </div>
+
+      <div class="form-group">
+        <label>Contact Person</label>
+        <input type="text" id="contactPerson">
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="text" id="phone">
+      </div>
+
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" id="email">
+      </div>
+
+      <div class="form-group">
+        <label>Address</label>
+        <input type="text" id="address">
+      </div>
+
+      <div class="form-group">
+        <label>Categories (comma separated)</label>
+        <input type="text" id="categories">
+      </div>
+
+      <div class="form-group">
+        <label>Rating (1-5)</label>
+        <select id="rating">
+          <option value="5">5</option>
+          <option value="4">4</option>
+          <option value="3" selected>3</option>
+          <option value="2">2</option>
+          <option value="1">1</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Notes</label>
+        <textarea id="notes"></textarea>
+      </div>
+
+      <div class="modal-actions">
+        <button type="button" class="btn-cancel" onclick="closeModal()">Cancel</button>
+        <button type="submit" class="btn-save">Save</button>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+<script src="js/suppliers.js"></script>
+
 </body>
 </html>
